--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,6 +89,7 @@ a {
 
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
 
@@ -149,8 +150,25 @@ a {
   }
 }
 
-/* data-table classes */
-/* #data-table th:not(:last-child),
+/* --- custom classes --- */
+
+#data-table-wrapper table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#data-table-wrapper th {
+  background-color: #fafafa;
+  color: #333333;
+}
+
+#data-table-wrapper th,
+#data-table-wrapper td {
+  padding: 10px 18px;
+  text-align: left;
+}
+
+#data-table th:not(:last-child),
 #data-table td:not(:last-child) {
   border-right: solid 1px hsl(var(--border));
-} */
+}
